--- a/config.ini
+++ b/config.ini
@@ -3,6 +3,8 @@ ComputerName = RCSWH-SVR01
 ComputerName = RCSWH-AIR01
 ComputerName = WH-RCSZB
 ComputerName = Terry-T450
+ComputerName = ABC
+ComputerName = SVR01
 
 [EventLog]
 ProviderName= e1dexpress
@@ -16,13 +18,15 @@ ZettaLicenseServer = WH-RCSZB
 ZettaLicenseServer = Terry-T450
 
 [GSLicenseServer]
-GSLicenseServer = Terry-T450
+GSLicenseServer = WH-RCSZB
 
 [ZettaInstance]
-ZettaInstance = Terry-T450
+ZettaInstance = WH-RCSZB
+ZettaInstance = RCSWH-SVR01
 
 [GSInstance]
-GSInstance = Terry-T450
+GSInstance = WH-RCSZB
+GSInstance = RCSWH-SVR01
 
 [AQInstance]
 AQInstance = RCSWH-SVR01
